retry-endpoint/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-endpoint
  namespace: retry-test-project
spec:
  hosts:
    - retry-endpoint
  http:
    - route:
      - destination:
        host: retry-endpoint
